--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pywebview>=5.1",
     "aiohttp>=3.9.0",
     "typer[all]>=0.12.0",
+    "requests==2.32.5"
 ]
 
 [project.optional-dependencies]
