--- a/pypulsar/templates/react_advanced/requirements.txt
+++ b/pypulsar/templates/react_advanced/requirements.txt
@@ -1,5 +1,6 @@
-# PyPulsar Basic Template – dependencies
+# PyPulsar React Basic Template – dependencies
 # Run: pip install -r requirements.txt
+
 pypulsar
 
 pywebview>=5.1          # Core – native webview windows
