--- a/pypulsar/templates/basic/requirements.txt
+++ b/pypulsar/templates/basic/requirements.txt
@@ -1,6 +1,7 @@
 # PyPulsar Basic Template – dependencies
 # Run: pip install -r requirements.txt
-pypulsar
+
+pypulsar[desktop]
 
 pywebview>=5.1          # Core – native webview windows
 aiohttp>=3.9            # Built-in local dev server
