--- a/pypulsar/templates/react_advanced/requirements.txt
+++ b/pypulsar/templates/react_advanced/requirements.txt
@@ -1,7 +1,7 @@
 # PyPulsar React Basic Template – dependencies
 # Run: pip install -r requirements.txt
 
-pypulsar
+pypulsar[desktop]
 
 pywebview>=5.1          # Core – native webview windows
 aiohttp>=3.9            # Built-in local dev server
